# surface-area

./: Cargo.toml  run.sh
data/: 2632.kml  juigne.gpx  obere-gasse-13.gpx  saint-michel.gpx
src/: dataset.rs  hgt.rs  intersection.rs  lib.rs  main.rs  mercator.rs  point.rs  polygon.rs  read_kml.rs  read_polygon.rs  reference.rs  svg.rs  triangulation.rs  typst.rs
